# term_notes

./: Cargo.toml  notes.json
src/: main.rs  notes_app.rs
src/notes_app/: mod.rs  notes_app.rs  notes_repository.rs
