[package]
name = "term_notes"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.39"
color-eyre = "0.6.3"
crossterm = "0.28.1"
ratatui = "0.29.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.137"
textwrap = "0.16.1"
tui-input = "0.11.1"
tui-textarea = "0.7.0"
